--- a/index.html
+++ b/index.html
@@ -3,14 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Library</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    
+    <div>
+        <p> Ismail`s Library</p>
+        <button class="add-btn">+</button>
+    </div>
 
-    <div class="hi">Hello</div>
-    <div class="bye">Bye</div>
+    <div class="modal" id="bookModal">
+        <div class="modal-content">
+            <h2>Add New Book</h2>
+            <form id="bookForm">
+                <label for="author">Author:</label>
+                <input type="text" id="author" required><br><br>
+                <label for="title">Title:</label>
+                <input type="text" id="title" required><br><br>
+                <label for="pages">Pages:</label>
+                <input type="number" id="pages" required><br><br>
+                <label for="read">Read:</label>
+                <input type="checkbox" id="read"><br><br>
+                <button type="submit">Add Book</button>
+                <button class="close-btn" id="closeModal" >Close</button>
+            </form>
+        </div>
+    </div>
+    <div class="grid-container">
+    </div>
+    
 
 
 
