--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 
 <body>
     
-    <div>
-        <p> Ismail`s Library</p>
-        <button class="add-btn">+</button>
+    <div class="header">
+        <div>
+            <p class="welcome"> Welcome To The Library</p>
+        </div>
+
+        <div>
+            <button class="add-btn">+</button>
+        </div>
+        
+
     </div>
 
     <div class="bookform">
